# Nemisis

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/: README.md
assets/briefs/: BLENDER_AGENT_BRIEFS.md
assets/export/: README.md
assets/export/gltf/: a1_prototype_pack_manifest.json
assets/export/gltf/characters/: chr_a1_fp_arms_01.glb  chr_a1_fp_arms_01.metadata.json  chr_a1_stylized_operator_01.glb  chr_a1_stylized_operator_01.metadata.json  chr_dev_arms_a.glb  chr_dev_arms_a.metadata.json  chr_dev_soldier_a.glb  chr_dev_soldier_a.metadata.json  chr_player_capsule_proxy_01.glb  chr_player_capsule_proxy_01.metadata.json
assets/export/gltf/environments/: env_test_arena_kit_01.glb  env_test_arena_kit_01.metadata.json
assets/export/gltf/props/: prop_target_dummy_01.glb  prop_target_dummy_01.metadata.json
assets/export/gltf/weapons/: wpn_a1_compact_rifle_01.glb  wpn_a1_compact_rifle_01.metadata.json  wpn_a1_compact_sidearm_01.glb  wpn_a1_compact_sidearm_01.metadata.json  wpn_a1_modern_rifle_01.glb  wpn_a1_modern_rifle_01.metadata.json  wpn_ar_01.glb  wpn_ar_01.metadata.json  wpn_sidearm_01.glb  wpn_sidearm_01.metadata.json  wpn_smg_01.glb  wpn_smg_01.metadata.json
assets/processed/readiness/: asset_readiness_scan.json
assets/project_assets/: character_male1.metadata.json  skybox1.metadata.json  weapon_rifle_afr120.metadata.json  weapon_rifle_m4a1.metadata.json  weapon_rifle_ncar.metadata.json  weapon_sidearm_glock19.glb  weapon_sidearm_glock19.metadata.json  weapon_sidearm_p320.glb  weapon_sidearm_p320.metadata.json  weapon_smg_fr17.metadata.json
assets/source/: README.md
assets/source/blender/a2_visual_pack/: chr_a2_pilot_operator_01.blend  map_a2_cover_crate_01.blend  map_a2_slide_ramp_01.blend  map_a2_wallrun_panel_01.blend  prop_a2_range_hero_01.blend  wpn_a2_blackout_carbine_01.blend  wpn_a2_modular_rifle_01.blend  wpn_a2_striker_sidearm_01.blend
assets/source/blender/characters/: chr_a1_fp_arms_01.blend  chr_a1_stylized_operator_01.blend  chr_dev_arms_a.blend  chr_dev_soldier_a.blend  chr_player_capsule_proxy_01.blend
assets/source/blender/environments/: env_test_arena_kit_01.blend
assets/source/blender/props/: prop_target_dummy_01.blend
assets/source/blender/weapons/: wpn_a1_compact_rifle_01.blend  wpn_a1_compact_sidearm_01.blend  wpn_a1_modern_rifle_01.blend  wpn_ar_01.blend  wpn_sidearm_01.blend  wpn_smg_01.blend
configs/: README.md
configs/assets/: nemisis_assets.json
configs/game_modes/: tdm_control.json
configs/input/: default_input.json
configs/movement/: player_movement.json
configs/net/: server_default.json
configs/render/: dev_range_render.json
configs/weapons/: core_trio.json
docs/: 00_MASTER_ROADMAP.md  00_REPOSITORY_ARCHITECTURE.md  01_GAMEPLAY_ARCHITECTURE.md  04_PLAYER_MOVEMENT.md  05_PLAYER_CHARACTER_ANIMATION.md  06_GUNPLAY_WEAPONS.md  07_UTILITY_AND_GAMEMODES.md  10_INPUT_CONTROLLER_MKB.md  11_UI_MENUS_SETTINGS.md  14_FIRST_IMPLEMENTATION_STEPS.md  15_PLAYABLE_DEV_SANDBOX.md  16_ASSET_PRODUCTION_PLAN.md  17_IDE_TOOLCHAIN_AND_BLENDER_RUNBOOK.md  19_PROJECT_KANBAN.md  20_GREYBOX_PHASE_PLAN.md  21_DEV_RANGE_SESSION_AND_USER_STATE.md  22_NEMISIS_LORE.md  ASSET_IMPORT_READINESS.md  PROJECT_STATUS.md
game/include/nemisis/: GameApp.hpp
game/include/nemisis/assets/: DevAssetBindings.hpp  GameAssetCatalog.hpp
game/include/nemisis/dev/: DebugTarget.hpp  DevRangeRenderScene.hpp  DevRangeSession.hpp  DevSandbox.hpp  DevTargetRange.hpp  GreyboxCollision.hpp  GreyboxWorld.hpp
game/include/nemisis/input/: GameplayInputBuffer.hpp  InputBindings.hpp  InputCommandBuilder.hpp
game/include/nemisis/movement/: MovementConfig.hpp  MovementSystem.hpp  MovementTech.hpp  MovementTuning.hpp
game/include/nemisis/net/: CommandMessages.hpp  LoopbackCommandBridge.hpp
game/include/nemisis/player/: PlayerAnimation.hpp  PlayerCameraRig.hpp  PlayerCommandQueue.hpp  PlayerComponents.hpp  PlayerHealth.hpp  PlayerInputCommand.hpp  PlayerProfile.hpp  PlayerSpawn.hpp  PlayerView.hpp
game/include/nemisis/render/: RenderTuning.hpp
game/include/nemisis/settings/: GameSettings.hpp  (+1 more)
game/src/: GameApp.cpp  main.cpp
game/src/assets/: DevAssetBindings.cpp  GameAssetCatalog.cpp
game/src/dev/: DebugTarget.cpp  DevRangeRenderScene.cpp  DevRangeSession.cpp  DevSandbox.cpp  DevTargetRange.cpp  GreyboxCollision.cpp  GreyboxWorld.cpp
game/src/input/: GameplayInputBuffer.cpp  InputBindings.cpp  InputCommandBuilder.cpp
game/src/movement/: MovementConfig.cpp  MovementSystem.cpp
game/src/net/: CommandMessages.cpp  LoopbackCommandBridge.cpp
game/src/player/: PlayerAnimation.cpp  PlayerCameraRig.cpp  PlayerCommandQueue.cpp  PlayerHealth.cpp  PlayerProfile.cpp  PlayerSpawn.cpp  PlayerView.cpp
game/src/render/: RenderTuning.cpp
game/src/settings/: GameSettings.cpp  UserSettingsPersistence.cpp
game/src/ui/: GameMenu.cpp  UiCanvas.cpp
game/src/weapons/: WeaponAttachments.cpp  WeaponMetrics.cpp  WeaponShot.cpp  WeaponSimulation.cpp  WeaponSystem.cpp
tests/: asset_catalog_tests.cpp  command_messages_tests.cpp  debug_target_tests.cpp  dev_asset_bindings_tests.cpp  dev_range_render_scene_tests.cpp  dev_range_session_tests.cpp  dev_sandbox_tests.cpp  dev_target_range_tests.cpp  game_menu_tests.cpp  game_settings_tests.cpp  greybox_collision_tests.cpp  greybox_world_tests.cpp  input_command_tests.cpp  loopback_command_bridge_tests.cpp  movement_replay_tests.cpp  player_animation_tests.cpp  player_camera_rig_tests.cpp  player_command_queue_tests.cpp  player_health_tests.cpp  player_profile_tests.cpp  player_spawn_tests.cpp  player_view_tests.cpp  render_tuning_tests.cpp  ui_canvas_tests.cpp  user_settings_persistence_tests.cpp  weapon_attachments_tests.cpp  weapon_metrics_tests.cpp  weapon_shot_tests.cpp  weapon_simulation_tests.cpp
tools/assets/: asset_readiness_check.py
tools/blender/: CODEX_ASSET_AGENT.md  README.md  asset_job_template.json  make_a1_prototype_pack.py  make_a2_visual_pack.py  make_dev_primitives.py  make_prototype_pack.py  render_a2_preview.py  run_make_dev_primitives.ps1
(+8 files in other folders)
